load("@rules_cc//cc:defs.bzl",
     "cc_library",
     ## "cc_shared_library"
     )
load("@makeheaders//src:RULES.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_SRCS", "BASE_DEPS", "BASE_INCLUDE_PATHS",
     "BASE_COPTS",
     "BASE_DEFINES", "LOCAL_DEFINES",
     "BASE_LINKOPTS")

SRCS          = BASE_SRCS
DEPS          = BASE_DEPS + ["@uthash//src:uthash"]
INCLUDE_PATHS = BASE_INCLUDE_PATHS + ["-I$(@uthash)/src"]
COPTS         = BASE_COPTS + [
    "-Wno-unused-parameter"
] + INCLUDE_PATHS
DEFINES       = BASE_DEFINES
LINKOPTS      = BASE_LINKOPTS
TOOLCHAINS    = ["//:repo_paths"]

# WITH_SYSTEM_EXTRAS
  # is_directory_symbol, file_exists_symbol, delete_file_symbol,
  # getenv_symbol, system_symbol,
  # directory_to_list_symbol,
  # file_mtime_symbol

# used in s7.c only:
# WITH_MAIN - enables main() for std repl

# WITH_NOTCURSES - if also WITH_MAIN, includes nrepl.c and excludes
# std repl code, and loads nrepl.scm in s7_repl.
# if WITH_MAIN && WITH_NOTCURSES
#     #include nrepl.c,

###########
cc_library( # delivers libs7.lo
    name  = "s7",
    linkstatic = True,
    alwayslink = True,
    srcs  = SRCS + [
        "fs_api.c", # FIXME: replace with cwalk
        "s7.c", "s7.h", # FIXME: use makeheaders
        "libs7.c",
        ":mkhdrs",
    ] + select({
        "//config/profile:dev?": [
            "debug_s7.c"
        ],
        "//conditions:default": []
    }),
    deps  = DEPS,
    hdrs  = ["libs7.h"],
    copts = COPTS + select({
        # allow for warnings in s7.c
        "//config/host/build:macos?": [
            "-Wno-format-pedantic",
            "-Wno-gnu-statement-expression",
        ],
        "//config/host/build:linux?": [
            "-Wno-implicit-fallthrough"
        ],
        "//conditions:default": []
    }),
    data = [
        "//scm:srcs",
        "//scm/srfi:srcs",
        "//scm/s7:srcs",
        # "s7.h"
    ],
    defines = DEFINES,
    local_defines = LOCAL_DEFINES + [
        "WITH_SYSTEM_EXTRAS",
        "WITH_C_LOADER"
        # FIXME: if --//config:notcurses
        # "WITH_MAIN",
        # "WITH_NOTCURSES"
    ],
    linkopts = LINKOPTS,
    toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

##################
cc_shared_library(
    name = "s7_dso",
    shared_lib_name = select({
        "@platforms//os:macos": "libs7.dylib",
        "@platforms//os:linux": "libs7.so",
        # "@platforms//os:windows": "libs7.dll",
        "//conditions:default": "libs7.so"
    }),
    deps = [":s7"],
    visibility = ["//visibility:public"]
)

############
makeheaders(
    name = "mkhdrs",
    hdrs_renamed = {"libs7.c": "libs7_internal.h"},
    hdrs_srcs = select({
        "//config/profile:dev?": [
            "debug_s7.c"
        ],
        "//conditions:default": []
    }),
    additional_srcs = ["s7.h", "fs_api.c"] + select({
        "//config/profile:dev?": [
            "//src/macros:trace.h",
            "//src/macros:ansi_colors.h",
        ],
        "//conditions:default": ["//src/macros:notrace.h"]
    }),
)

makeheaders(
    name = "mkhdrs_export",
    out ="libs7.h",
    export_interface = True,
    hdrs_srcs = [
        "libs7.c",
    ] + select({
        "//config/profile:dev?": [
            "debug_s7.c"
        ],
        "//conditions:default": []
    }),
    additional_srcs = ["s7.h", "fs_api.c"],
    visibility = ["//visibility:public"]
)
